<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.DetailsFragment">

        <TextView
            android:id="@+id/countryName"
            style="@style/black_bold_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textAllCaps="true"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/cities" />

        <ImageView
            android:id="@+id/flagImage"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/countryName"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/magnifyText"
            style="@style/black_italic_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/click_to_magnify"
            app:layout_constraintBottom_toBottomOf="@id/flagImage" />

        <TextView
            android:id="@+id/row1Text"
            style="@style/black_normal_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/magnifyText"
            tools:text="@string/capital_info" />

        <TextView
            android:id="@+id/row2Text"
            style="@style/black_normal_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/row1Text"
            tools:text="@string/alt_spellings_info" />

        <TextView
            android:id="@+id/row3Text"
            style="@style/black_normal_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/row2Text"
            tools:text="@string/region_info" />

        <TextView
            android:id="@+id/row4Text"
            style="@style/black_normal_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/row3Text"
            tools:text="@string/languages_info" />

        <TextView
            android:id="@+id/row5Text"
            style="@style/black_normal_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/row4Text"
            tools:text="@string/languages_info" />

        <TextView
            android:id="@+id/row6Text"
            style="@style/black_normal_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@id/row5Text"
            tools:text="@string/alpha_2_code_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>